Fix validation dataset issue with automatic train/val split
- Update dataset.yaml to remove val folder dependency
- Add automatic train/validation split (80/20) in both notebooks
- Fixes Colab training error: 'missing path val/images'
- Now works with just train/images folder for both local and Colab
- YOLO automatically handles train/val splitting from training data

This resolves the FileNotFoundError that prevented training in Colab
and makes the setup simpler for users (no need for separate val data).

--- a/dataset.yaml
+++ b/dataset.yaml
@@ -2,9 +2,9 @@
 # 6-class custom dataset: bird, dog, cat, motorcycle, car, truck
 
 # Dataset paths (relative to this file)
+# YOLO will automatically split train data for validation (80/20 split)
 path: .
 train: train/images
-val: val/images
 
 # Number of classes
 nc: 6
