Fix YOLO validation dataset configuration
- Update dataset.yaml to include both train and val keys pointing to same folder
- Change split_fraction parameter to fraction in both notebooks for YOLO auto-split
- Add original_images backup directory to prevent data augmentation loops
- Ensure validation data is available for both local and Colab training

This resolves the "dataset.yaml 'val:' key missing" error and enables automatic
80/20 train/validation splitting without requiring separate validation folders.

--- a/dataset.yaml
+++ b/dataset.yaml
@@ -1,10 +1,11 @@
-# YOLO Dataset Configuration for Drone Detection
+# YOLO Dataset Configuration for Drone Detection  
 # 6-class custom dataset: bird, dog, cat, motorcycle, car, truck
 
 # Dataset paths (relative to this file)
-# YOLO will automatically split train data for validation (80/20 split)
+# Note: Both train and val point to same folder - YOLO will auto-split during training
 path: .
 train: train/images
+val: train/images
 
 # Number of classes
 nc: 6
